Fix spanning cell painting background from wrong row

Previously when we painted a table section not from the first row
and the starting row contained spanned cells, we may paint the
cell with the wrong row background.

Now expands the dirty rows/columns to the top/left to cover the grid
slots from which the spanning primary cells' originate. In this way,
we also simply painting code to just consider the primary cells
originating from the grid slots.

This is also a preparation of crbug.com/663208 to paint background of
each table section/row in one display item.

BUG=706255
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2783953002
Cr-Commit-Position: refs/heads/master@{#460822}

Former-commit-id: 29bb853d07d410286f932802134ff3732777f713