third_party/WebKit/Source/core/paint/TableSectionPainter.h
@@ -11,7 +11,6 @@
 
 namespace blink {
 
-class CellSpan;
 class CollapsedBorderValue;
 class LayoutPoint;
 class LayoutTableCell;
@@ -38,17 +37,6 @@ class TableSectionPainter {
                                   const LayoutPoint&);
   void paintCell(const LayoutTableCell&, const PaintInfo&, const LayoutPoint&);
   void paintBoxShadow(const PaintInfo&, const LayoutPoint&, ShadowStyle);
-
-  // Returns the primary cell that should be painted for the grid item at (row,
-  // column) intersecting dirtiedRows and dirtiedColumns. Returns nullptr if we
-  // have painted the grid item when painting the grid item left to or above
-  // (row, column) when painting cells intersecting dirtiedRows and
-  // dirtiedColumns.
-  const LayoutTableCell* primaryCellToPaint(
-      unsigned row,
-      unsigned column,
-      const CellSpan& dirtiedRows,
-      const CellSpan& dirtiedColumns) const;
 
   enum ItemToPaint { PaintCollapsedBorders, PaintSection };
   void paintRepeatingHeaderGroup(const PaintInfo&,
